@@ -5,6 +5,8 @@ Version 0.1.1~dev
 	* Rework stream plugin to work directly with streams.
 	* Filter by actual streams to monitor (gis2spv).
 	* Use Lisardo's request to load spv (gis2spv).
+	* Fix lintian warning about distributing non-executable scripts starting
+	  with a shebang.
 
 Version 0.1.0 Released on 2009/05/12
 
